# Veyra

./: .coveragerc  .dockerignore  .env.example  .gitignore  100_PERCENT_COMPLETE.md  AI_ENGINE_README.md  API_DOCUMENTATION.md  ARCHITECTURE.md  AUDIT_DELIVERABLES_INDEX.md  AUDIT_REPORT.md  CI_CD_SETUP.md  CI_FAILURES_RESOLUTION.md  COMPLETE_FILE_INVENTORY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_SETUP_GUIDE.md  COMPREHENSIVE_DEEP_ANALYSIS_REPORT.md  COMPREHENSIVE_FEATURE_CHECK.md  COMPREHENSIVE_GAP_ANALYSIS_COMPLETE.md  COMPREHENSIVE_MULTI_CLOUD_GUIDE.md  COMPREHENSIVE_QUALITY_AUDIT_2026.md  CONTRIBUTING.md  CRITICAL_GAPS_CLOSED.md  CRITICAL_IMPLEMENTATION_COMPLETE.md  CROSS_PLATFORM_ECOSYSTEM.md  DEEPSEEK_IMPLEMENTED.md  DEEP_GAP_ANALYSIS_SSS_GRADE.md  DEEP_SCAN_SSS_ANALYSIS.md  DEPLOYMENT_GUIDE.md  E2E_TESTS_IMPLEMENTED.md  FINAL_ACHIEVEMENT_600.md  FINAL_INTEGRATION_COMPLETE.md  FINAL_SUMMARY.md  FINAL_SYSTEM_SUMMARY.md  FINOS_MERGE_ANALYSIS.md  FINOS_MERGE_COMPLETE.md  GAP_ANALYSIS_AND_ROADMAP.md  GAP_IMPLEMENTATION_SUMMARY.md  GRADE_400_ACHIEVEMENT.md  GRADE_IMPROVEMENT_TRACKER.md  GitHub Secrets Setup ✅.txt  (+79 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: pull_request_template.md
.windsurf/: settings.json
00_START_HERE/: 00_FILE_ORGANIZATION_SUMMARY.txt  01_MASTER_DATA_CONSOLIDATED.csv  02_THE_DEFINITIVE_COMPLETE_MASTER_GUIDE.txt  03_COMPLETE_MASTER_INDEX.txt  04_FOLDER_MAINTENANCE_PROTOCOL.txt  05_NEW_FILE_INTAKE_CHECKLIST.txt  06_NEW_GUIDE_TEMPLATE.txt  07_CLOUD_STORAGE_VAULT_GUIDE.txt  08_CUSTOMIZABLE_MASTER_TEMPLATE_GUIDE.txt  09_DYNAMIC_UNIVERSAL_FINANCIAL_SYSTEM.txt  10_GLOBAL_TAX_DATABASE_ALL_COUNTRIES.txt  11_MASTER_EXECUTION_FRAMEWORK.txt  12_AI_AUTONOMOUS_AUTOMATION_GUIDE.txt  13_AUTONOMOUS_WEALTH_ENGINE.txt  14_CUSTOM_AUTONOMOUS_BUILD_GUIDE.txt  15_BUILD_YOUR_OWN_PLATFORMS.txt  16_FIVE_STAR_SYSTEM_BLUEPRINT.txt  (+8 more)
config/: .coveragerc  Dockerfile  Makefile  docker-compose.ollama.yml  docker-compose.yml  production.yaml  pyproject.toml  pytest.ini  render.yaml  staging.yaml  wrangler.toml
config/docker/: .env.example  Dockerfile  docker-compose.yml
config/environments/: .env.example  .env.local  .env.staging
(+2413 files in other folders)
